v2.2.7
----------------------------------------------------------------------------------------------------
 * Prefer MDContactEmail directive to ServerAdmin for registration. New directive
   thanks for Timothe Litt (@tlhackque).
 * Distribute a2md.xml and conditionally build it, if xmlto is available. Addition
   by Joe Orton (@notroj).

v2.2.6
----------------------------------------------------------------------------------------------------
 * Michal Karm Babacek (@Karm) added `cmake` support, especially valuable under Windows.
 * protocol check for pre-configured "tls-alpn-01" challenge has been improved. It will now
   check all matching virtual hosts for protocol support. Thanks to @mkauf.

v2.2.5
----------------------------------------------------------------------------------------------------
 * Corrected a check when OCSP stapling was configured for hosts
   where the responsible MDomain is not clear, by Michal Karm Babacek (@Karm).
 * @uhliarik added documentation for the `a2md` command. Use `xmlto man ./a2md.xml` to generate it.
 * Softening the restrictions where mod_md configuration directives may appear. This should
   allow for use in <If> and <Macro> sections. If all possible variations lead to the configuration
   you wanted in the first place, is another matter. 
 
v2.2.4
----------------------------------------------------------------------------------------------------
 * Fixed a compile time issue with OpenSSL 1.0.2 in the new OCSP code.
 * Skip port checks for domain server_rec selection when "tls-alpn-01" is configured
   explicitly (related to #133). [@mkauf]
 * Added a sample scripts/md_message.sh on how to use `MDMessageCmd`.

v2.2.3
----------------------------------------------------------------------------------------------------
 * Configuring MDCAChallenges replaces any previous existing challenge configuration. It
   had been additive before which was not the intended behaviour. [@mkauf]